--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="css/bootstrap-datepicker.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+    <script> window.location="index.php"; </script>
         <div class="main-wrapper">
             <div class="header">
                 <div class="header-left">
