--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="sidebar">
-                <div class="sidebar-inner slimscroll">
+                <div class="sidebar-inner">
 					<div class="profile-widget">
 						<div class="profile-img">
 							<img alt="Doctor Name" src="" class="img-responsive img-circle" width="150" height="150">
